crates/core/tests/snapshots/shimmer_test__shimmer__alt_global.snap
---
source: crates/core/tests/shimmer_test.rs
expression: "read_shim(&shim_path, sandbox.path())"
---
#!/usr/bin/env bash
set -e

if [ -n "$PROTO_DEBUG" ]; then
    set -x
    echo "Running with primary.sh shim"
fi

exec proto run primary --alt "other/bin/path" --  "$@" 

