crates/core/tests/snapshots/shimmer_test__shimmer__alt_global_with_args.snap
---
source: crates/core/tests/shimmer_test.rs
expression: "read_shim(&shim_path, sandbox.path())"
---
#!/usr/bin/env bash
set -e
[ -n "$PROTO_DEBUG" ] && set -x



exec proto run primary --alt "other/bin/path" -- --a -b "$@" ./file


