crates/core/tests/snapshots/shimmer_test__shimmer__global.snap
---
source: crates/core/tests/shimmer_test.rs
expression: "read_shim(&shim, sandbox.path())"
---
#!/usr/bin/env bash
set -e
[ -n "$PROTO_DEBUG" ] && set -x



exec proto run primary --  "$@"


