crates/core/tests/snapshots/shimmer_test__shimmer__local_with_parent_and_args.snap
---
source: crates/core/tests/shimmer_test.rs
expression: "read_shim(&shim, sandbox.path())"
---
#!/usr/bin/env bash
set -e
[ -n "$PROTO_DEBUG" ] && set -x



export PROTO_TOOL_DIR="/.proto/tools/tool/1.2.3"



export PROTO_TOOL_VERSION="1.2.3"



parent="${PROTO_NODE_BIN:-node}"

exec "$parent" "bin/tool" --a -b "$@" ./file


